@@ -1,6 +1,7 @@
 Revision history for html-autotag-ruby
 
 0.0.11
+    - added col and colgroup params
     - added caption param
 
 0.0.10
